services/personal-website/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: personal-website-ingress
  namespace: personal-website
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
    - host: aeoly.us
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: personal-website
                port:
                  number: 80
